actually making the html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!-- welcome to hi-dot-com! -->
 
+<!DOCTYPE html>
+
 <html>
 	<head>
 		<title>hi-dot-com!</title>
+		<body>
+			<h1>this is a headline</h1>
+			<p>welcome to hi-dot-com! :D</p>
+		</body>
 	</head>
 </html>
