--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<title>hi-dot-com!</title>
 		<body>
 			<h1>this is a headline</h1>
+
 			<p>welcome to hi-dot-com! :D</p>
+
+			<h2>I think this is a smaller headline</h2>
 		</body>
 	</head>
 </html>
