--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <html>
 	<head>
 		<title>hi-dot-com!</title>
+		
+		<!-- metadata goes here -->
+		<meta charset="UTF-8"> <!-- specifies our encoding is UTF8 -->
+		<meta name = "author" content = "mindigo">
+		<!-- size based on device, zoom 1.0 -->
+		<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+	</head>
 		<body>
 			<h1>this is a headline</h1>
 
@@ -12,5 +19,4 @@
 
 			<h2>I think this is a smaller headline</h2>
 		</body>
-	</head>
 </html>
